<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tampil_data">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="200dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_person_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/grey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/register"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/garis"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000" />

                <LinearLayout
                    android:id="@+id/LinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/nama"
                        android:textColor="#000"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tvNim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/nim"
                        android:textColor="#000"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tvProdi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/prodi"
                        android:textColor="#000"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tvKelas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/kelas"
                        android:textColor="#000"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/status"
                        android:textColor="#000"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/grey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvInputjdwl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Jadwal"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/garis2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSenin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/senin"
                        android:textColor="#000"
                        android:textSize="22sp" />
                    <TextView
                        android:id="@+id/tvSelasa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Selasa"
                        android:textColor="#000"
                        android:textSize="22sp" />
                    <TextView
                        android:id="@+id/tvRabu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Rabu"
                        android:textColor="#000"
                        android:textSize="22sp" />
                    <TextView
                        android:id="@+id/tvKamis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Kamis"
                        android:textColor="#000"
                        android:textSize="22sp" />


                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/keluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="Close" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
